// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButton euiButton--primary testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props color danger is rendered 1`] = `
<button
  class="euiButton euiButton--danger"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color ghost is rendered 1`] = `
<button
  class="euiButton euiButton--ghost"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color primary is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color secondary is rendered 1`] = `
<button
  class="euiButton euiButton--secondary"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color text is rendered 1`] = `
<button
  class="euiButton euiButton--text"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color warning is rendered 1`] = `
<button
  class="euiButton euiButton--warning"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props fill is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--fill"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props fullWidth is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--fullWidth"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props href secures the rel attribute when the target is _blank 1`] = `
<a
  class="euiButton euiButton--primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</a>
`;

exports[`EuiButton props iconSide left is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButton__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props iconSide right is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--iconRight"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButton__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props iconType is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButton__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props isDisabled is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  disabled=""
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props isDisabled renders a button even when href is defined 1`] = `
<button
  class="euiButton euiButton--primary"
  disabled=""
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props isLoading is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  disabled=""
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiLoadingSpinner euiLoadingSpinner--medium euiButton__spinner"
    />
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props size l is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--large"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props size m is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props size s is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--small"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;
